add multi page pdf - add form to pdf modal

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -92,8 +92,8 @@ input[type=number] {
 	cursor: pointer;
 }
 
-#the-canvas {
-  border: 1px solid black;
+.the-canvas {
+  border: 1px solid #d4d4d4;
   direction: ltr;
   width: 100%;
 }
